--- a/vignettes/Intro_to_Rthoptera.Rmd
+++ b/vignettes/Intro_to_Rthoptera.Rmd
@@ -14,23 +14,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r setup}
-library(Rthoptera)
-```
-
----
-title: "Introduction to Rthoptera"
-author: "Francisco Rivas"
-output: rmarkdown::html_vignette
-vignette: >
-  %\VignetteIndexEntry{Introduction to Rthoptera}
-  %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
----
-
-# Introduction to Rthoptera
-
-**Rthoptera** is an R package that provides interactive Shiny applications for standard analysis of insect sounds. It offers tools for pre-processing, spectral and temporal analysis, as well as interactive visualization of oscillograms and spectrograms. This package aims to simplify the process of importing, processing, and analyzing insect sound recordings in a user-friendly interface using standardized plotting and measurements. 
+*Rthoptera* is an R package that provides interactive Shiny applications for standard analysis of insect sounds. The package is intended to be used on high signal-to-noise recordings, helping researchers make standardized measurements and plots. It offers functions for pre-processing, spectral and temporal analysis, as well as several interactive and static visualizations.
 
 ## Pre-processing
 
@@ -46,17 +30,17 @@ The package offers several pre-processing tools that allow you to handle audio f
 
 ## Analysis
 
-Once pre-processing is complete, Rthoptera offers a range of analysis tools to extract spectral and temporal statistics from your audio files:
+Once pre-processing is complete, *Rthoptera* offers analysis tools to extract spectral and temporal statistics from your audio files:
 
 - **Spectral Statistics**: Automatically calculate spectral metrics based on the mean power spectrum of a Wave object. These statistics provide insights into the frequency domain of the audio signal.
 
-- **Temporal Statistics**: Automatically extract temporal metrics from your audio recordings. This includes identifying and analyzing peaks (pulses), trains (syllables), and echemes (groups of syllables or trills) in the insect sounds.
+- **Temporal Statistics**: Automatically extract temporal metrics from your audio recordings. This includes identifying and analyzing elements ("tooth impacts"), trains (syllables), and echemes (groups of syllables or trills) in the insect sounds. Two apps are available: `temporal_stats_hq_app` is optimized to work with "tonal" (i.e., "high-Q") signals, such as those produced by most crickets. It creates an envelope of the waveform and measures the sound durations and gaps based on a user-defined detection threshold. The  `temporal_stats_lq_app` works better for broadband calls with wide amplitude variability, where the threshold approach would leave fainter sounds undetected or poorly measured. This app detects each peak in the envelope, often corresponding to a single tooth impact, and groups them into trains and echemes with user-defined distances. 
 
 ## Plotting
 
-- **Multi-Power Spectra**: An interactive tool that overlays multiple power spectra on a color-coded oscillogram, allowing for easy comparison and visualization of spectral features across different time intervals.
+- **Multi-Power Spectrum**: An interactive tool that overlays multiple power spectrum plots selected from the oscillogram, allowing for easy comparison and visualization of spectral features across different time intervals. Each selection is assigned to its own color-blind-safe color both in the oscillogram and the mean spectrum plots. 
 
-- **Spectrogram**: Generate standard spectrograms alongside a lateral mean power spectrum. This combination allows you to visualize both time-frequency representations and the overall spectral distribution.
+- **Spectrogram**: Generate standard spectrograms, optionally alongside a lateral mean power spectrum. This combination allows you to visualize both time-frequency representations and the overall spectral distribution. The spectrogram window size is automatically adjusted based on the sampling rate and duration of the recording to obtain a standard frequency/time resolution trade-off. 
 
 - **Multi Plot**: A combined visualization of the spectrogram and oscillogram, providing a comprehensive view of both the time-domain and frequency-domain characteristics of the insect sounds.
 
