--- a/vignettes/Preprocessing.Rmd
+++ b/vignettes/Preprocessing.Rmd
@@ -12,22 +12,30 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## When and why to preprocess your recordings
 
-There are many reasons why bioacousticians edit their recordings before analyzing them. This is especially true when working with field recordings, where non-target sounds may obscure or 'soil' the analyses, often occupying frequencies below the signal of interest. In other cases, the field recordist used an ultrasonic microphone and a high sampling rate (e.g., 128 kHz, 384 kHz) and the recorded insect happened to sing well  below the Nyquist frequency (half the sampling rate). Sometimes the insect doesn't call very often, forcing us to monitor for long periods of silence without stopping the recording. In all these cases, we will need to preprocess our recordings. ***Rthoptera*** offers functions to deal with most of these issues, minimizing the need for multiple software in your workflow. 
+There are many reasons why bioacousticians edit their recordings before analyzing them. This is especially true when working with field recordings, where non-target sounds may obscure the analyses, often occupying frequencies below the signal of interest. In other cases, the field recordist used an ultrasonic microphone and a high sampling rate (e.g., 128 kHz, 384 kHz) and the recorded insect happened to sing well  below the Nyquist frequency (half the sampling rate). Sometimes the insect doesn't call very often, forcing us to monitor for long periods of silence without stopping the recording. In all these cases, we will need to preprocess our recordings. ***Rthoptera*** offers functions to deal with most of these issues, minimizing the need for multiple software in your workflow. 
 
-DISCLAIMER: R is not optimized for rendering large ammounts of data in plots. If you have long sound files (> 1 min) recording at high sampling rates (> 48 kHz), you might want to subset them with a dedicated audio software before importing them into R. A popular free audio editor is Audacity. 
+DISCLAIMER: R is not optimized for rendering large amounts of data in plots. If you have long sound files (> 1 min) recorded at high sampling rates (> 48 kHz), you might want to subset them with a dedicated audio software before importing them into R. A popular free audio editor is Audacity. 
 
-Run this code in the R console or in a new R script to open the `import_wave_app`, which will allow you to select, name and import sound files as R objects of class "Wave". 
+Run this code in R to open the `import_wave_app`, which will allow you to select, name and import sound files as R objects of class "Wave". 
 
 ```{r, echo=TRUE, eval = FALSE}
 library(Rthoptera)
 import_wave_app()
 ```
 
-## Including Plots
+Now you can use the different functions to preprocess the Wave before analysis. All the preprocessing apps in ***Rthoptera*** produce blueprint-like plots to remind users these are not intended for publication, but instead to aid in decision-making on the edits. 
 
-You can also embed plots, for example:
-```{r pressure, echo=FALSE}
-plot(pressure)
+As a rule of thumb, if you want to analyze several snippets of a recording separately, you should first evaluate if you need to do any filtering or downsampling before extracting the cuts to avoid repeating the process for each. If you want to analyze only a selection of the wave file, you might want to trim it before filtering, which will optimize processing time for the other editing steps. 
+
+### Trim
+To trim a Wave, run the `trim_app()`, plot the oscillogram, select the portion you want to save, type a name for it, and save it. You can overwrite the original Wave by assigning the same name for the selection (this will not have any effect outside the R environment), or assign a new name to create a new Wave object.If you want to save several snippets of the same length, just drag the first selection to the desired position and assign a new name before saving. 
+
+### Downsample
+If you think the sampling rate used to record an insect was unnecessarily high, use the `downsample_app()` to verify this and downsample if appropriate. By design, the minimum Nyquist allowed for this in `Rthoptera` is 48 kHz. The other two options are 96 kHz, and 192 kHz. For most crickets, 48 kHz Nyquist will suffice, but caution must be applied. Once the app has launched, select the Wave you want to analyze and click "Plot". Now you can assess what is the maximum frequency of interest (MaxFOI) by hovering over the Mean Power Spectrum. If the MaxFOI is less than half of the Nyquist (maximum visible frequency in the plot), you can consider downsampling. Select the closest available value above the MaxFOI and click "Downsample". For this example, we will use the "gryllus" Wave included with ***Rthoptera***, a recording of *Gryllus campestris* made by Cesare Brizio in Italy.
+
+```{r, echo=TRUE, eval = FALSE}
+data("gryllus")
+downsample_app()
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
